# comfyui-blackwell-kernels

./: .gitignore  INSTALL_PREBUILT.md  INSTALL_WINDOWS.md  README.md  __init__.py  benchmark.py  build.bat  build.sh  pyproject.toml  setup.py
.github/workflows/: build.yml
csrc/attention/: flash_attn_sm120a.cu
csrc/common/: cp_async.cuh  ldmatrix.cuh  mma_sm120.cuh  swizzle.cuh
python/blackwell_kernels/: __init__.py  attention.py
tests/: test_comfy_render.py
